--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -255,11 +255,11 @@ figure {
 }
 
 a {
-  color: #0070f3;
+  color: #69aaf1;
   text-decoration: none;
 }
 a:hover {
-  color: #3291ff;
+  color: #9dc8f6;
 }
 
 .links {
